// POS Switch AI Agent - Database Schema
// 複製此內容到 https://dbdiagram.io 即可查看 ER 圖

// ==================== 權限系統 ====================

Table permissions {
  id int [pk, increment]
  code varchar [unique, note: 'product_management, checkout, order_history, statistics, system_settings']
  name varchar [not null]
  description text
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

Table roles {
  id int [pk, increment]
  name varchar [unique, not null]
  description text
  is_active boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

Table role_permissions {
  role_id int [pk, ref: > roles.id]
  permission_id int [pk, ref: > permissions.id]
}

// ==================== 店家與使用者 ====================

Table stores {
  id int [pk, increment]
  name varchar [not null]
  address varchar
  phone varchar
  is_active boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

Table users {
  id int [pk, increment]
  store_id int [ref: > stores.id, note: 'nullable']
  role_id int [not null, ref: > roles.id]
  email varchar [unique, not null]
  password_hash varchar [not null]
  name varchar [not null]
  is_active boolean [default: true]
  last_login_at datetime
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

Table refresh_tokens {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  jti varchar [unique, not null, note: 'JWT Token ID']
  expires_at datetime [not null]
  revoked_at datetime [note: 'nullable']
  created_at datetime [default: `now()`]
}

// ==================== 商品與分類 ====================

Table categories {
  id int [pk, increment]
  name varchar [not null]
  description text
  sort_order int [default: 0]
  is_active boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

Table products {
  id int [pk, increment]
  category_id int [not null, ref: > categories.id]
  name varchar [not null]
  description text
  price decimal [not null]
  sku varchar
  barcode varchar
  image_url varchar
  stock int
  track_stock boolean [default: false]
  sort_order int [default: 0]
  is_active boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

// ==================== 商品客製化 ====================

Table option_groups {
  id int [pk, increment]
  name varchar [not null, note: '甜度、冰塊、尺寸']
  display_name varchar [not null, note: '顯示名稱']
  selection_type varchar [not null, default: 'single', note: 'single=單選, multiple=多選']
  is_required boolean [default: false, note: '是否必選']
  sort_order int [default: 0]
  is_active boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

Table options {
  id int [pk, increment]
  option_group_id int [not null, ref: > option_groups.id]
  name varchar [not null, note: '正常糖、半糖、微糖']
  price_adjustment decimal [default: 0, note: '價格調整，可為負數']
  is_default boolean [default: false]
  sort_order int [default: 0]
  is_active boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

Table addons {
  id int [pk, increment]
  name varchar [not null, note: '珍珠、椰果、布丁']
  price decimal [not null, default: 0, note: '加購價格']
  stock int
  track_stock boolean [default: false]
  sort_order int [default: 0]
  is_active boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

// 商品可用選項群組 (多對多)
Table product_option_groups {
  id int [pk, increment]
  product_id int [not null, ref: > products.id]
  option_group_id int [not null, ref: > option_groups.id]
  is_required boolean [default: false, note: '覆蓋群組預設']
  sort_order int [default: 0]

  indexes {
    (product_id, option_group_id) [unique]
  }
}

// 商品可用加購 (多對多)
Table product_addons {
  id int [pk, increment]
  product_id int [not null, ref: > products.id]
  addon_id int [not null, ref: > addons.id]
  max_quantity int [default: 99, note: '最大加購數量']
  sort_order int [default: 0]

  indexes {
    (product_id, addon_id) [unique]
  }
}

// ==================== 套餐系統 ====================

Table combos {
  id int [pk, increment]
  category_id int [ref: > categories.id, note: '套餐分類']
  name varchar [not null, note: 'A餐、超值午餐']
  description text
  price decimal [not null, note: '套餐價格']
  original_price decimal [note: '原價，用於顯示折扣']
  image_url varchar
  sort_order int [default: 0]
  is_active boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

// 套餐群組 (一個套餐由多個群組組成)
Table combo_groups {
  id int [pk, increment]
  combo_id int [not null, ref: > combos.id]
  name varchar [not null, note: '主餐、配餐、飲料']
  description text [note: '請選擇一項主餐']
  selection_type varchar [not null, default: 'single', note: 'single=單選, multiple=多選']
  min_selections int [default: 1, note: '最少選擇數量']
  max_selections int [default: 1, note: '最多選擇數量']
  is_required boolean [default: true]
  sort_order int [default: 0]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

// 群組可選商品
Table combo_group_items {
  id int [pk, increment]
  combo_group_id int [not null, ref: > combo_groups.id]
  product_id int [not null, ref: > products.id]
  price_adjustment decimal [default: 0, note: '價差，例: 升級大薯 +$10']
  is_default boolean [default: false, note: '預設選項']
  sort_order int [default: 0]

  indexes {
    (combo_group_id, product_id) [unique]
  }
}

// ==================== 訂單系統 ====================

Table orders {
  id int [pk, increment]
  order_number varchar [unique, not null]
  store_id int [ref: > stores.id, note: 'nullable']
  user_id int [ref: > users.id, note: 'nullable - 操作員']
  table_number varchar
  subtotal decimal [not null, default: 0]
  tax decimal [not null, default: 0]
  discount decimal [not null, default: 0]
  total decimal [not null, default: 0]
  status varchar [not null, default: 'draft', note: 'draft, in_progress, pending, completed, cancelled, refunded']
  checkout_mode varchar [not null, default: 'pre_pay', note: 'pre_pay, post_pay']
  notes text
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

Table order_items {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id]
  product_id int [not null, ref: > products.id]
  product_name varchar [not null, note: '快照，避免商品名稱變更']
  unit_price decimal [not null, note: '基礎價格快照']
  options_price decimal [not null, default: 0, note: '選項價格調整']
  addons_price decimal [not null, default: 0, note: '加購總價']
  quantity int [not null, default: 1]
  subtotal decimal [not null, note: '(unit_price + options_price + addons_price) * quantity']
  notes text
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

// 訂單品項選項 (記錄客戶選擇)
Table order_item_options {
  id int [pk, increment]
  order_item_id int [not null, ref: > order_items.id]
  option_id int [not null, ref: > options.id]
  option_group_name varchar [not null, note: '快照: 甜度']
  option_name varchar [not null, note: '快照: 半糖']
  price_adjustment decimal [not null, default: 0, note: '快照']
  created_at datetime [default: `now()`]
}

// 訂單品項加購 (記錄客戶加購)
Table order_item_addons {
  id int [pk, increment]
  order_item_id int [not null, ref: > order_items.id]
  addon_id int [not null, ref: > addons.id]
  addon_name varchar [not null, note: '快照: 珍珠']
  unit_price decimal [not null, note: '快照: 加購單價']
  quantity int [not null, default: 1]
  subtotal decimal [not null, note: 'unit_price * quantity']
  created_at datetime [default: `now()`]
}

// 訂單套餐 (記錄購買的套餐)
Table order_combos {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id]
  combo_id int [not null, ref: > combos.id]
  combo_name varchar [not null, note: '快照: A餐']
  unit_price decimal [not null, note: '快照: 套餐價格']
  quantity int [not null, default: 1]
  subtotal decimal [not null]
  notes text
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

// 訂單套餐選擇 (記錄套餐內的商品選擇)
Table order_combo_selections {
  id int [pk, increment]
  order_combo_id int [not null, ref: > order_combos.id]
  combo_group_id int [not null, ref: > combo_groups.id]
  product_id int [not null, ref: > products.id]
  group_name varchar [not null, note: '快照: 主餐']
  product_name varchar [not null, note: '快照: 大麥克']
  price_adjustment decimal [not null, default: 0, note: '快照: 升級價差']
  quantity int [not null, default: 1]
  created_at datetime [default: `now()`]
}

Table payments {
  id int [pk, increment]
  order_id int [not null, ref: > orders.id]
  method varchar [not null, note: 'cash, credit_card, mobile_pay, other']
  amount decimal [not null]
  received_amount decimal [note: '現金收取金額']
  change decimal [note: '找零']
  status varchar [not null, default: 'completed', note: 'pending, completed, failed, refunded']
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

// ==================== 系統設定 ====================

Table settings {
  id int [pk, increment]
  store_id int [ref: > stores.id, note: 'nullable - null 表示全域設定']
  key varchar [not null]
  value text
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]

  indexes {
    (store_id, key) [unique]
  }
}
